@@ -1,3 +1,9 @@
-# softHSM configuration file
+# SoftHSM configuration file
 #
+# Format:
+# <Slot ID>:<Path to the token database>
+#
+# The given paths are just an indication to SoftHSM on where it should 
+# store the information for each token.
+
 0:@softhsmdbdir@/slot0.db
